// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing components testing Header.jsx 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="sc-dkPtRN iHrXQq"
      >
        <header
          class="sc-bdvvtL RYIYw"
          data-testid="header"
        >
          <a
            href="/"
          >
            <img
              alt="Synergy of Serra Logo"
              class="sc-gsDKAQ dxFEtn"
              data-testid="logo"
              src="logo.png"
            />
          </a>
        </header>
        <div
          class="sc-hKwDye gfSNxp"
        >
          <h1>
            Synergy Of Serra
          </h1>
          <p>
            Welcome to the best TCG lore on the internet
          </p>
          <div
            class="button-container"
          >
            <a
              class="sc-eCImPb easDBn"
              href="/signup"
            >
              <h4
                class="sc-jRQBWg fxVyAX"
              >
                Sign Up
              </h4>
            </a>
            <a
              class="sc-eCImPb easDBn"
              href="/login"
            >
              <h4
                class="sc-jRQBWg fxVyAX"
              >
                Log In
              </h4>
            </a>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="sc-dkPtRN iHrXQq"
    >
      <header
        class="sc-bdvvtL RYIYw"
        data-testid="header"
      >
        <a
          href="/"
        >
          <img
            alt="Synergy of Serra Logo"
            class="sc-gsDKAQ dxFEtn"
            data-testid="logo"
            src="logo.png"
          />
        </a>
      </header>
      <div
        class="sc-hKwDye gfSNxp"
      >
        <h1>
          Synergy Of Serra
        </h1>
        <p>
          Welcome to the best TCG lore on the internet
        </p>
        <div
          class="button-container"
        >
          <a
            class="sc-eCImPb easDBn"
            href="/signup"
          >
            <h4
              class="sc-jRQBWg fxVyAX"
            >
              Sign Up
            </h4>
          </a>
          <a
            class="sc-eCImPb easDBn"
            href="/login"
          >
            <h4
              class="sc-jRQBWg fxVyAX"
            >
              Log In
            </h4>
          </a>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`testing components testing login.jsx 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="sc-dkPtRN iHrXQq"
      >
        <header
          class="sc-bdvvtL RYIYw"
          data-testid="header"
        >
          <a
            href="/"
          >
            <img
              alt="Synergy of Serra Logo"
              class="sc-gsDKAQ dxFEtn"
              data-testid="logo"
              src="logo.png"
            />
          </a>
        </header>
        <article
          class="sc-ieecCq xChtw"
        >
          <form
            class="sc-hGPBjI jFgoeZ"
            data-testid="login-form"
          >
            <p
              aria-live="assertive"
              class="sc-bkkeKt gNqsZS"
              style="display: none;"
            />
            <h1
              class="sc-furwcr tNjMY"
            >
              login
            </h1>
            <section
              class="sc-dJjYzT btqgGA"
            >
              <div>
                <div
                  style="width: 100%;"
                >
                  <label
                    class="sc-pVTFL hoRDKJ"
                    for="currentEmail"
                  >
                    E-Mail Address
                  </label>
                  <div
                    class="sc-kDTinF ljxjtz"
                  >
                    <img
                      alt=""
                      class="sc-jrQzAO eWyusU"
                      src="mail.svg"
                      type="email"
                    />
                    <input
                      autocomplete="currentEmail"
                      class="sc-iqseJM iwBhHn"
                      id="currentEmail"
                      name="currentEmail"
                      placeholder="E-Mail Address"
                      required=""
                      type="email"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="width: 100%;"
                >
                  <label
                    class="sc-pVTFL hoRDKJ"
                    for="currentPassword"
                  >
                    Password
                  </label>
                  <div
                    class="sc-kDTinF ljxjtz"
                  >
                    <img
                      alt=""
                      class="sc-jrQzAO uULdV"
                      src="lock.svg"
                      type="password"
                    />
                    <input
                      autocomplete="currentPassword"
                      class="sc-iqseJM iwBhHn"
                      id="currentPassword"
                      name="currentPassword"
                      placeholder="Password"
                      required=""
                      type="password"
                      value=""
                    />
                    <img
                      alt="Show Password"
                      class="sc-jrQzAO uULdV"
                      src="eye.svg"
                      style="cursor: pointer;"
                      type="show"
                    />
                  </div>
                </div>
              </div>
            </section>
            <button
              aria-label="Log In"
              class="sc-eCImPb easDBn"
              disabled=""
              style="margin-block: 1rem;"
              type="submit"
            >
              <h4
                class="sc-jRQBWg fxVyAX"
              >
                LOGIN
              </h4>
            </button>
            <div
              class="sc-gKclnd bQdpoZ"
            >
              Don't have an account yet?
              <a
                href="/signup"
              >
                Sign up
              </a>
            </div>
            <div
              class="sc-gKclnd bQdpoZ"
            >
              Don't Remember Your Password?
              <a
                href="/login"
              >
                Recover My Password
              </a>
            </div>
          </form>
        </article>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="sc-dkPtRN iHrXQq"
    >
      <header
        class="sc-bdvvtL RYIYw"
        data-testid="header"
      >
        <a
          href="/"
        >
          <img
            alt="Synergy of Serra Logo"
            class="sc-gsDKAQ dxFEtn"
            data-testid="logo"
            src="logo.png"
          />
        </a>
      </header>
      <article
        class="sc-ieecCq xChtw"
      >
        <form
          class="sc-hGPBjI jFgoeZ"
          data-testid="login-form"
        >
          <p
            aria-live="assertive"
            class="sc-bkkeKt gNqsZS"
            style="display: none;"
          />
          <h1
            class="sc-furwcr tNjMY"
          >
            login
          </h1>
          <section
            class="sc-dJjYzT btqgGA"
          >
            <div>
              <div
                style="width: 100%;"
              >
                <label
                  class="sc-pVTFL hoRDKJ"
                  for="currentEmail"
                >
                  E-Mail Address
                </label>
                <div
                  class="sc-kDTinF ljxjtz"
                >
                  <img
                    alt=""
                    class="sc-jrQzAO eWyusU"
                    src="mail.svg"
                    type="email"
                  />
                  <input
                    autocomplete="currentEmail"
                    class="sc-iqseJM iwBhHn"
                    id="currentEmail"
                    name="currentEmail"
                    placeholder="E-Mail Address"
                    required=""
                    type="email"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                style="width: 100%;"
              >
                <label
                  class="sc-pVTFL hoRDKJ"
                  for="currentPassword"
                >
                  Password
                </label>
                <div
                  class="sc-kDTinF ljxjtz"
                >
                  <img
                    alt=""
                    class="sc-jrQzAO uULdV"
                    src="lock.svg"
                    type="password"
                  />
                  <input
                    autocomplete="currentPassword"
                    class="sc-iqseJM iwBhHn"
                    id="currentPassword"
                    name="currentPassword"
                    placeholder="Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <img
                    alt="Show Password"
                    class="sc-jrQzAO uULdV"
                    src="eye.svg"
                    style="cursor: pointer;"
                    type="show"
                  />
                </div>
              </div>
            </div>
          </section>
          <button
            aria-label="Log In"
            class="sc-eCImPb easDBn"
            disabled=""
            style="margin-block: 1rem;"
            type="submit"
          >
            <h4
              class="sc-jRQBWg fxVyAX"
            >
              LOGIN
            </h4>
          </button>
          <div
            class="sc-gKclnd bQdpoZ"
          >
            Don't have an account yet?
            <a
              href="/signup"
            >
              Sign up
            </a>
          </div>
          <div
            class="sc-gKclnd bQdpoZ"
          >
            Don't Remember Your Password?
            <a
              href="/login"
            >
              Recover My Password
            </a>
          </div>
        </form>
      </article>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`testing components testing signup.jsx 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="sc-dkPtRN iHrXQq"
      >
        <header
          class="sc-bdvvtL RYIYw"
          data-testid="header"
        >
          <a
            href="/"
          >
            <img
              alt="Synergy of Serra Logo"
              class="sc-gsDKAQ dxFEtn"
              data-testid="logo"
              src="logo.png"
            />
          </a>
        </header>
        <article
          class="sc-ieecCq xChtw"
        >
          <form
            class="sc-hGPBjI jFgoeZ"
            data-testid="signup-form"
          >
            <p
              aria-live="assertive"
              class="sc-bkkeKt gNqsZS"
              style="display: none;"
            />
            <h1
              class="sc-furwcr tNjMY"
            >
              signup
            </h1>
            <section
              class="sc-dJjYzT btqgGA"
            >
              <div>
                <div
                  style="width: 100%;"
                >
                  <label
                    class="sc-pVTFL hoRDKJ"
                    for="username"
                  >
                    Username
                  </label>
                  <div
                    class="sc-kDTinF ljxjtz"
                  >
                    <img
                      alt=""
                      class="sc-jrQzAO uULdV"
                      src="user.svg"
                      type="text"
                    />
                    <input
                      aria-describedby="username-error-msg"
                      aria-invalid="true"
                      autocomplete="username"
                      class="sc-iqseJM iwBhHn"
                      data-testid="username"
                      id="username"
                      name="username"
                      placeholder="Username"
                      required=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="sc-hBUSln koFSzo"
                >
                  <div
                    aria-live="assertive"
                    class="sc-fotOHu cjQMcC"
                    id="username-error-msg"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                      />
                    </svg>
                    Username is required and:
                    <br />
                    - Must be between 3 and 20 characters.
                    <br />
                    - Must begin with a letter.
                    <br />
                    - Letters, numbers, underscores, hyphens allowed.
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="width: 100%;"
                >
                  <label
                    class="sc-pVTFL hoRDKJ"
                    for="newEmail"
                  >
                    E-Mail Address
                  </label>
                  <div
                    class="sc-kDTinF ljxjtz"
                  >
                    <img
                      alt=""
                      class="sc-jrQzAO eWyusU"
                      src="mail.svg"
                      type="email"
                    />
                    <input
                      aria-describedby="new-email-error-msg"
                      aria-invalid="true"
                      autocomplete="newEmail"
                      class="sc-iqseJM iwBhHn"
                      data-testid="new-email"
                      id="newEmail"
                      name="newEmail"
                      placeholder="E-Mail Address"
                      required=""
                      type="email"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="sc-hBUSln koFSzo"
                >
                  <div
                    aria-live="assertive"
                    class="sc-fotOHu cjQMcC"
                    id="new-email-error-msg"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                      />
                    </svg>
                    Email is required and must be a valid email address.
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="width: 100%;"
                >
                  <label
                    class="sc-pVTFL hoRDKJ"
                    for="newPassword"
                  >
                    Password
                  </label>
                  <div
                    class="sc-kDTinF ljxjtz"
                  >
                    <img
                      alt=""
                      class="sc-jrQzAO uULdV"
                      src="lock.svg"
                      type="password"
                    />
                    <input
                      aria-describedby="new-password-error-msg"
                      aria-invalid="false"
                      autocomplete="newPassword"
                      class="sc-iqseJM iwBhHn"
                      data-testid="new-password"
                      id="newPassword"
                      name="newPassword"
                      placeholder="Password"
                      required=""
                      type="password"
                      value=""
                    />
                    <img
                      alt="Show Password"
                      class="sc-jrQzAO uULdV"
                      src="eye.svg"
                      style="cursor: pointer;"
                      type="show"
                    />
                  </div>
                </div>
                <div
                  class="sc-hBUSln koFSzo"
                >
                  <div
                    aria-live="assertive"
                    class="sc-fotOHu cjQMcC"
                    id="new-password-error-msg"
                  >
                    <div
                      class="sc-crHmcD"
                      id="pwdnote"
                    >
                      <p
                        class="sc-egiyK eMlXnC"
                      >
                        <svg
                          class="sc-ksdxgE jLzFfG"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 352 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                        The password must contain at least 8 characters.
                      </p>
                      <p
                        class="sc-egiyK eMlXnC"
                      >
                        <svg
                          class="sc-ksdxgE jLzFfG"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 352 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                        The password must contain at least 1 uppercase character.
                      </p>
                      <p
                        class="sc-egiyK eMlXnC"
                      >
                        <svg
                          class="sc-ksdxgE jLzFfG"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 352 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                        The password must contain at least 1 lowercase character.
                      </p>
                      <p
                        class="sc-egiyK eMlXnC"
                      >
                        <svg
                          class="sc-ksdxgE jLzFfG"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 352 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                        The password must contain at least 1 number.
                      </p>
                      <p
                        class="sc-egiyK eMlXnC"
                      >
                        <svg
                          class="sc-ksdxgE jLzFfG"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 352 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                        The password must contain at least 1 special character. Allowed special characters:
                      </p>
                      <p
                        class="sc-egiyK eMlXnC"
                      >
                        <svg
                          class="sc-bqiRlB biQtZT"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          />
                        </svg>
                        The password must not contain any spaces.
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="width: 100%;"
                >
                  <label
                    class="sc-pVTFL hoRDKJ"
                    for="confirmPassword"
                  >
                    Confirm Password
                  </label>
                  <div
                    class="sc-kDTinF ljxjtz"
                  >
                    <img
                      alt=""
                      class="sc-jrQzAO uULdV"
                      src="lock.svg"
                      type="password"
                    />
                    <input
                      aria-describedby="confirm-password-error-msg"
                      aria-invalid="true"
                      autocomplete="confirmPassword"
                      class="sc-iqseJM iwBhHn"
                      data-testid="confirm-password"
                      id="confirmPassword"
                      name="confirmPassword"
                      placeholder="Confirm Password"
                      required=""
                      type="password"
                      value=""
                    />
                    <img
                      alt="Show Password"
                      class="sc-jrQzAO uULdV"
                      src="eye.svg"
                      style="cursor: pointer;"
                      type="show"
                    />
                  </div>
                </div>
                <div
                  class="sc-hBUSln koFSzo"
                >
                  <div
                    aria-live="assertive"
                    class="sc-fotOHu cjQMcC"
                    id="confirm-password-error-msg"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                      />
                    </svg>
                    Must match the first password input field.
                  </div>
                </div>
              </div>
            </section>
            <section
              style="margin-block: 0.9rem;"
            >
              <div
                class="sc-fFeiMQ iicsEf"
              >
                <input
                  id="newsLetter"
                  name="newsLetter"
                  type="checkbox"
                />
                <label
                  for="newsLetter"
                >
                  <div
                    class="sc-gKclnd bQdpoZ"
                  >
                    I want to receive news about Synergy of Serra
                    
                  </div>
                </label>
              </div>
              <div
                class="sc-fFeiMQ iicsEf"
              >
                <input
                  data-testid="terms"
                  id="terms"
                  name="terms"
                  type="checkbox"
                />
                <label
                  for="terms"
                >
                  <div
                    class="sc-gKclnd bQdpoZ"
                  >
                    I read and agree to the
                    <a
                      href="/signup"
                    >
                      Terms of Service
                    </a>
                  </div>
                </label>
              </div>
            </section>
            <button
              aria-label="Sign Up"
              class="sc-eCImPb easDBn"
              disabled=""
              type="submit"
            >
              <h4
                class="sc-jRQBWg fxVyAX"
              >
                Signup
              </h4>
            </button>
            <div
              class="sc-gKclnd bQdpoZ"
            >
              Already Have an Account?
              <a
                href="/login"
              >
                Login
              </a>
            </div>
          </form>
        </article>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="sc-dkPtRN iHrXQq"
    >
      <header
        class="sc-bdvvtL RYIYw"
        data-testid="header"
      >
        <a
          href="/"
        >
          <img
            alt="Synergy of Serra Logo"
            class="sc-gsDKAQ dxFEtn"
            data-testid="logo"
            src="logo.png"
          />
        </a>
      </header>
      <article
        class="sc-ieecCq xChtw"
      >
        <form
          class="sc-hGPBjI jFgoeZ"
          data-testid="signup-form"
        >
          <p
            aria-live="assertive"
            class="sc-bkkeKt gNqsZS"
            style="display: none;"
          />
          <h1
            class="sc-furwcr tNjMY"
          >
            signup
          </h1>
          <section
            class="sc-dJjYzT btqgGA"
          >
            <div>
              <div
                style="width: 100%;"
              >
                <label
                  class="sc-pVTFL hoRDKJ"
                  for="username"
                >
                  Username
                </label>
                <div
                  class="sc-kDTinF ljxjtz"
                >
                  <img
                    alt=""
                    class="sc-jrQzAO uULdV"
                    src="user.svg"
                    type="text"
                  />
                  <input
                    aria-describedby="username-error-msg"
                    aria-invalid="true"
                    autocomplete="username"
                    class="sc-iqseJM iwBhHn"
                    data-testid="username"
                    id="username"
                    name="username"
                    placeholder="Username"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="sc-hBUSln koFSzo"
              >
                <div
                  aria-live="assertive"
                  class="sc-fotOHu cjQMcC"
                  id="username-error-msg"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                  Username is required and:
                  <br />
                  - Must be between 3 and 20 characters.
                  <br />
                  - Must begin with a letter.
                  <br />
                  - Letters, numbers, underscores, hyphens allowed.
                </div>
              </div>
            </div>
            <div>
              <div
                style="width: 100%;"
              >
                <label
                  class="sc-pVTFL hoRDKJ"
                  for="newEmail"
                >
                  E-Mail Address
                </label>
                <div
                  class="sc-kDTinF ljxjtz"
                >
                  <img
                    alt=""
                    class="sc-jrQzAO eWyusU"
                    src="mail.svg"
                    type="email"
                  />
                  <input
                    aria-describedby="new-email-error-msg"
                    aria-invalid="true"
                    autocomplete="newEmail"
                    class="sc-iqseJM iwBhHn"
                    data-testid="new-email"
                    id="newEmail"
                    name="newEmail"
                    placeholder="E-Mail Address"
                    required=""
                    type="email"
                    value=""
                  />
                </div>
              </div>
              <div
                class="sc-hBUSln koFSzo"
              >
                <div
                  aria-live="assertive"
                  class="sc-fotOHu cjQMcC"
                  id="new-email-error-msg"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                  Email is required and must be a valid email address.
                </div>
              </div>
            </div>
            <div>
              <div
                style="width: 100%;"
              >
                <label
                  class="sc-pVTFL hoRDKJ"
                  for="newPassword"
                >
                  Password
                </label>
                <div
                  class="sc-kDTinF ljxjtz"
                >
                  <img
                    alt=""
                    class="sc-jrQzAO uULdV"
                    src="lock.svg"
                    type="password"
                  />
                  <input
                    aria-describedby="new-password-error-msg"
                    aria-invalid="false"
                    autocomplete="newPassword"
                    class="sc-iqseJM iwBhHn"
                    data-testid="new-password"
                    id="newPassword"
                    name="newPassword"
                    placeholder="Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <img
                    alt="Show Password"
                    class="sc-jrQzAO uULdV"
                    src="eye.svg"
                    style="cursor: pointer;"
                    type="show"
                  />
                </div>
              </div>
              <div
                class="sc-hBUSln koFSzo"
              >
                <div
                  aria-live="assertive"
                  class="sc-fotOHu cjQMcC"
                  id="new-password-error-msg"
                >
                  <div
                    class="sc-crHmcD"
                    id="pwdnote"
                  >
                    <p
                      class="sc-egiyK eMlXnC"
                    >
                      <svg
                        class="sc-ksdxgE jLzFfG"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 352 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        />
                      </svg>
                      The password must contain at least 8 characters.
                    </p>
                    <p
                      class="sc-egiyK eMlXnC"
                    >
                      <svg
                        class="sc-ksdxgE jLzFfG"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 352 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        />
                      </svg>
                      The password must contain at least 1 uppercase character.
                    </p>
                    <p
                      class="sc-egiyK eMlXnC"
                    >
                      <svg
                        class="sc-ksdxgE jLzFfG"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 352 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        />
                      </svg>
                      The password must contain at least 1 lowercase character.
                    </p>
                    <p
                      class="sc-egiyK eMlXnC"
                    >
                      <svg
                        class="sc-ksdxgE jLzFfG"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 352 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        />
                      </svg>
                      The password must contain at least 1 number.
                    </p>
                    <p
                      class="sc-egiyK eMlXnC"
                    >
                      <svg
                        class="sc-ksdxgE jLzFfG"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 352 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        />
                      </svg>
                      The password must contain at least 1 special character. Allowed special characters:
                    </p>
                    <p
                      class="sc-egiyK eMlXnC"
                    >
                      <svg
                        class="sc-bqiRlB biQtZT"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                        />
                      </svg>
                      The password must not contain any spaces.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="width: 100%;"
              >
                <label
                  class="sc-pVTFL hoRDKJ"
                  for="confirmPassword"
                >
                  Confirm Password
                </label>
                <div
                  class="sc-kDTinF ljxjtz"
                >
                  <img
                    alt=""
                    class="sc-jrQzAO uULdV"
                    src="lock.svg"
                    type="password"
                  />
                  <input
                    aria-describedby="confirm-password-error-msg"
                    aria-invalid="true"
                    autocomplete="confirmPassword"
                    class="sc-iqseJM iwBhHn"
                    data-testid="confirm-password"
                    id="confirmPassword"
                    name="confirmPassword"
                    placeholder="Confirm Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <img
                    alt="Show Password"
                    class="sc-jrQzAO uULdV"
                    src="eye.svg"
                    style="cursor: pointer;"
                    type="show"
                  />
                </div>
              </div>
              <div
                class="sc-hBUSln koFSzo"
              >
                <div
                  aria-live="assertive"
                  class="sc-fotOHu cjQMcC"
                  id="confirm-password-error-msg"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                  Must match the first password input field.
                </div>
              </div>
            </div>
          </section>
          <section
            style="margin-block: 0.9rem;"
          >
            <div
              class="sc-fFeiMQ iicsEf"
            >
              <input
                id="newsLetter"
                name="newsLetter"
                type="checkbox"
              />
              <label
                for="newsLetter"
              >
                <div
                  class="sc-gKclnd bQdpoZ"
                >
                  I want to receive news about Synergy of Serra
                  
                </div>
              </label>
            </div>
            <div
              class="sc-fFeiMQ iicsEf"
            >
              <input
                data-testid="terms"
                id="terms"
                name="terms"
                type="checkbox"
              />
              <label
                for="terms"
              >
                <div
                  class="sc-gKclnd bQdpoZ"
                >
                  I read and agree to the
                  <a
                    href="/signup"
                  >
                    Terms of Service
                  </a>
                </div>
              </label>
            </div>
          </section>
          <button
            aria-label="Sign Up"
            class="sc-eCImPb easDBn"
            disabled=""
            type="submit"
          >
            <h4
              class="sc-jRQBWg fxVyAX"
            >
              Signup
            </h4>
          </button>
          <div
            class="sc-gKclnd bQdpoZ"
          >
            Already Have an Account?
            <a
              href="/login"
            >
              Login
            </a>
          </div>
        </form>
      </article>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
